--- a/Husty-servise-agents/views/partials/footer.handlebars
+++ b/Husty-servise-agents/views/partials/footer.handlebars
@@ -1,5 +1,4 @@
-
 <footer>
-	(c) {{year}},  {{team}}. v.{{version}}
+	(c) {{year}},  {{team}}. v.{{version}}, instance: {{instance}} on {{host}}
 </footer>
  
